# safeai

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst  rga.rst  rge.rst  rgr.rst
example/: data_clean_ny_2017_sample.csv  safe_example.ipynb  safe_example_binary.ipynb  safeai_metrics_binary_multiclass_examples.ipynb
safe/: cramer.py  rga.py  rge.py  rgr.py  utils.py
safeai/: __init__.py  cramer.py  rga.py  rge.py  rgr.py  utils.py
